pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pending-pod

spec:
  containers:
  - name: nginx
    image: nginx

    resources:
      requests:
        memory: "2Gi"
